// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<div
  className="snapshot-class"
  data-qa="snapshot-qa"
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    justify="space-between"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="1"
      xs={6}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="2"
      xs={6}
    >
      <SearchBar
        className="snapshot-class"
        data-qa="table-search-bar"
        onCancelSearch={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        onChange={[Function]}
        placeholder="placeholder..."
        searchIcon={
          <Memo
            className=""
          />
        }
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`Snapshot Testing Required Props 1`] = `
<div
  className=""
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    direction="row"
    justify="space-between"
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="1"
      xs={6}
    />
    <WithStyles(ForwardRef(Grid))
      item={true}
      key="2"
      xs={6}
    >
      <SearchBar
        className=""
        data-qa="table-search-bar"
        onCancelSearch={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          }
        }
        onChange={[Function]}
        placeholder="placeholder..."
        searchIcon={
          <Memo
            className=""
          />
        }
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;
